--- a/public/customer/css/header.css
+++ b/public/customer/css/header.css
@@ -1,8 +1,8 @@
 body {
     font-family: "Open Sans", sans-serif;
 }
-.header
-{
+
+.header {
     height: auto;
     padding: 15px;
     /*display: inline-block;*/
@@ -13,117 +13,102 @@ body {
 .hv-header {
     text-align: center;
 }
-a{
-    /*color: #999d9f;*/
-    font-size:13px;
-    font-weight: lighter;
-    text-align: center;
+
+/* Mobile */
+.nav__bars-btn {
+    width: 28px;
+    height: 28px;
+    margin-left: 8px;
+    color: black;
+    display: none;
 }
 
-nav {
-    /*line-height:20px;*/
-    font-family: 'Open Sans', sans-serif;
-    letter-spacing:3px;
-    text-transform: uppercase;
-    position: relative;
-    text-align: center;
-
-
-}
- nav ul {
-    /*padding: 0;*/
-    margin: 0 auto;
-    /*width: 100%;*/
-     /*height: 30px;*/
-}
- nav li {
-    display: inline-block;
-}
-
-.hv-slide {
-    height: 100%;
-    width: 100%;
-}
-
-.hv-product {
-    margin-top: 30px !important;
-    text-align: center;
-
-}
-
-/*img{*/
-/*    width: 100%;*/
-/*    height: auto;*/
-/*}*/
-
-
-
-.col-sm-3 {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.column-inner {
-    box-sizing: border-box;
-    padding-left: 15px;
-    padding-right: 15px;
-    width: 100%;
-}
-
-.vertical-align-bottom {
-    font-weight:lighter;
-    letter-spacing:3px;
-    color: #ffffff !important;
-    text-align: center;
-}
-
-/*.row {*/
-/*    margin-left: -50px;*/
-/*    margin-right: -50px;*/
-/*}*/
-
-p {
-    font-weight: lighter;
-}
-.btn-1 {
-    text-align: center;
-    min-width: 160px;
-    display: inline-block;
-    background-color: #7dcde5;
-    padding: 15px 30px;
-    border-radius: 100px;
-    color: #ffffff !important;
-    margin-top: 20px;
-}
-
-
-/*.op_section {*/
-/*    width: 100%;*/
-/*    float: left;*/
-/*    height: 100%;*/
-/*}*/
-
-.important_weight_lighter {
-    color: #ffffff !important;
-    text-align: center;
-    vertical-align: bottom;
-}
-
-.bg_greydark {
-     position: absolute;
- }
-
-
-.affix {
+.nav__overlay {
+    position: fixed;
     top: 0;
-    width: 100%;
-    z-index: 9999 !important;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+    animation: fadeIn linear 0.3s;
 }
 
-.affix + .container-fluid {
-    padding-top: 70px;
+
+.nav__mobile_list {
+    margin-top: 24px;
+    text-align: center;
 }
 
-.op_section_pro {
-width: 250px;
+
+.nav__mobile {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 320px;
+    max-width: 100%;
+    background-color: #fff;
+    /* display: none; */
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: transform linear 0.5s, opacity linear 0.5s;
 }
+
+.nav__mobile_link {
+    text-decoration: none;
+    color: #333;
+    display: block;
+    padding: 8px 0;
+    /*font-size: 1.4 rem;*/
+}
+
+.nav__mobile_close {
+    width: 28px;
+    font-size: 1.4rem;
+    color: white;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+    display: none;
+}
+
+
+.nav__input:checked ~ .nav__overlay {
+    display: block;
+}
+
+.nav__input:checked ~ .nav__mobile {
+    transform: translateX(0%);
+    opacity: 1;
+}
+
+.nav__input {
+    display: none;
+}
+
+@media (max-width: 1023px) {
+    .nav__bars-btn {
+        display: block;
+    }
+
+    .list_pc {
+        display: none;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
