--- a/public/customer/css/media.css
+++ b/public/customer/css/media.css
@@ -6,6 +6,10 @@ h2 {
     float: left;
 }
 
+.single-post {
+    background-color: white;
+}
+
 @media only screen and (min-width: 767px) and (max-width: 1200px) {
 
     h2 {
@@ -13,7 +17,7 @@ h2 {
     }
 
     .col-md-3 {
-        max-width: 250px;
+        max-width: 390px;
         margin-left: 30px;
     }
 
@@ -31,10 +35,20 @@ h2 {
 @media only screen and (max-width: 977px) {
     .col-md-4 {
         max-width: 563px;
-        margin-left: 48px;
     }
+
     .single-post {
         width: 500px;
+    }
+}
+
+@media only screen and (max-width: 897px) {
+    .col-sm-6 {
+        max-width: 1003px;
+    }
+
+    .single-post {
+        width: 369px;
     }
 }
 
@@ -61,6 +75,7 @@ h2 {
         margin-left: -51px;
         text-align: center;
     }
+
     .post-thumb-info1 {
         width: 282px;
         margin-left: 37px;
