--- a/public/customer/css/header.css
+++ b/public/customer/css/header.css
@@ -54,6 +54,7 @@ body {
     transform: translateX(-100%);
     opacity: 0;
     transition: transform linear 0.5s, opacity linear 0.5s;
+    z-index: 9999;
 }
 
 .nav__mobile_link {
