--- a/public/customer/css/media.css
+++ b/public/customer/css/media.css
@@ -1,5 +1,7 @@
 h2 {
-    background-color: red;
+    font-weight: bolder;
+    /*color: white;*/
+    /*background-color: #fbc1c1;*/
 }
 
 .col-sm-4 {
